# los-inmaduros-fastapi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: keepalive.yml
alembic/: env.py
alembic/versions/: 8a540ca8e439_baseline_existing_prisma_schema.py
docs/: api-contract.md
docs/gherkin/: attendances.feature  auth.feature  config.feature  favorites.feature  photos.feature  reviews.feature  route-calls.feature  routes.feature
src/: main.py
src/attendances/: models.py  router.py  schemas.py  service.py
src/auth/: deps.py  models.py  router.py  schemas.py  service.py
src/common/: notifications.py  pagination.py  rate_limit.py  scheduler.py  storage.py
src/core/: config.py  database.py  exceptions.py  models_registry.py  schemas.py
src/favorites/: models.py
src/photos/: models.py  router.py  schemas.py  service.py
src/reviews/: models.py
src/route_calls/: models.py  router.py  schemas.py  service.py
src/routes/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_attendances.py  test_auth.py  test_health.py  test_models.py  test_notifications.py  test_pagination.py  test_photos.py  test_rate_limit.py  test_route_calls.py  test_routes.py  test_scheduler.py  test_schemas.py
