[project]
name = "los-inmaduros-fastapi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "sqlalchemy>=2.0.51",
    "svix>=1.96.1",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.29",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.fastapi]
entrypoint = "src.main:app"
